<?xml version="1.0"?>
<package>

  <name>multisense_description</name>
  <version>0.0.0</version>
  <description>multisense_description</description>
  <maintainer email="support@carnegierobotics.com">Carnegie Robotics</maintainer>
  <license>LGPL</license>

  <url type="website">https://bitbucket.org/crl/multisense_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>